# desutop

./: .hintrc  LICENSE  README.md
src/: index.html  settings.html  wallpaper.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locale/: CN.json  EN.json  ES.json  FR.json  JP.json  KR.json  default.json  sCH.json  tCH.json
src-tauri/src/: desktopicons.rs  locale.rs  main.rs  setwindow.rs  steamgames.rs
src/script/: onload.js
src/scripts/: clock.js  container.js  locale_datetime.js  main.js  menu.js  widgets.js
src/settings_page/: script.js  settings.html  style.css  switch.css
src/style/: above_layer.css  clock.css  container.css  note.css  steam.css  style.css
src/widgets/: container.css  container.js
