[package]
name = "Desutop"
version = "0.2.4"
description = "Desutop: A Tauri Based Desktop App"
authors = ["fanin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [
    'tray-icon',
    'image-ico',
    'image-png',
    'protocol-asset'
] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
regex = "1.10.5"
lazy_static = "1.5.0"
tauri-plugin-store = "2.0.0-rc"
rayon = "1.10.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-single-instance = "2.0.0-rc.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]
